Fix flickering

--- a/src/js/components/panel-multi-video.scss
+++ b/src/js/components/panel-multi-video.scss
@@ -17,7 +17,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        max-width: 1000px;
+        max-width: 720px;
         video {
             //border: 1px solid rgba(yellow, 0.8);
             filter: $video-filters;
